--- a/style.css
+++ b/style.css
@@ -34,7 +34,7 @@ p{
     padding-left: 25px;
 }
 .header{
-    background: url('background.jpg');
+    background: url('background0.jpg');
 }
 .row{
     display: flex;
